<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2014-2016 The OmniROM Project
     Copyright (C) 2021 The Evolution X Project
     Copyright (C) 2018 The Xiaomi-SDM660 Project
     Copyright (C) 2018-2021 crDroid Android Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:settings="http://schemas.android.com/apk/res/org.neoteric.device.DeviceExtras"
	android.title="@string/device_title">

    <PreferenceCategory
        android:key="usb"
        android:title="@string/usb_title">
        
    <SwitchPreferenceCompat
            android:key="otg"
            android:icon="@drawable/ic_otg_mode"
            android:title="@string/otg_mode_title"
            android:summary="@string/otg_mode_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="thermal"
        android:title="@string/thermal_title">

        <SwitchPreferenceCompat
            android:key="thermal_limiter"
            android:icon="@drawable/ic_thermal"
            android:title="@string/thermal_limiter_title"
            android:summary="@string/thermal_limiter_summary"
            android:defaultValue="false" />

        <Preference
            android:key="thermal_limiter_apps_picker"
            android:icon="@drawable/ic_thermal_apps"
            android:title="@string/thermal_limiter_apps_title"
            android:summary="@string/thermal_limiter_apps_summary"
            android:dependency="thermal_limiter" />

        <SeekBarPreference
            android:key="thermal_limiter_temp_warm"
            android:icon="@drawable/ic_thermal_temp"
            android:title="@string/thermal_limiter_temp_warm_title"
            android:max="60"
            app:defaultValue="40"
            android:dependency="thermal_limiter"
            app:min="35"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:key="thermal_limiter_temp_high"
            android:icon="@drawable/ic_thermal_temp"
            android:title="@string/thermal_limiter_temp_high_title"
            android:max="61"
            app:defaultValue="43"
            android:dependency="thermal_limiter"
            app:min="35"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:key="thermal_limiter_temp_critical"
            android:icon="@drawable/ic_thermal_temp"
            android:title="@string/thermal_limiter_temp_critical_title"
            android:max="62"
            app:defaultValue="45"
            android:dependency="thermal_limiter"
            app:min="35"
            app:showSeekBarValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
